--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 								<div class="container">
 									<header class="major">
 										<h2>My Portfolio - In Progress</h2>
-										<p>A showcase of my projects and my abilities.</p>
 									</header>
-									<p>7 Years experienced iOS Devloper.  [TODO]</p>
+									<p>Hello 👋 I'm Bhavesh Tandel, an experienced iOS Devloper. [TODO]</p>
 								</div>
 							</section>
 
